# erised

./: .clang-format  .gitignore  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  Dockerfile  README.md  docker-compose.html  docker-compose.yml  erised.qrc  index.html  main.cpp
.github/workflows/: build.yml  commit.yml  documentation.yml  release.yml
_docs/1-introduction/: content.md  meta.md  sidenotes.md
_docs/1-introduction/1-welcome/: content.md
_docs/1-introduction/2-what-is-erised/: content.md
_docs/1-introduction/3-get-started/: content.md
_docs/2-deployment/1-prerequisites/: content.md
_docs/2-deployment/2-install-packages/: content.md  sidenotes.md
_docs/2-deployment/3-starting/: content.md  sidenotes.md
_docs/3-widgets/: meta.md
_docs/3-widgets/1-introduction/: content.md
_docs/3-widgets/2-basic-example/: content.md  sidenotes.md
_docs/3-widgets/3-not-so-minimal-example/: content.md
clock-widget/: CMakeLists.txt  clock-widget.json  clock.h
css/: animations.css  main.css
docs/: index.html
docs-src/1-introduction/: content.md
docs/1-introduction/: content.md
hello-widget/: CMakeLists.txt  hello-widget.json  hello.h
server/: handler.cpp  handler.h  server.cpp  server.h
style/: global.h
test-widget/: CMakeLists.txt  test-widget.json  test.h
util/: byte_array.h  config.h  http.h  password.h  positioning.h  random.h  window.h
weather-widget/: CMakeLists.txt  icons.h  weather-widget.json  weather.h  weather.qrc
web-panel/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
web-panel/e2e/src/: app.e2e-spec.ts
web-panel/src/: index.html
web-panel/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  packet.ts
web-panel/src/app/components/widget/: widget.component.css  widget.component.html
widget/: interface.h  loader.h  manager.cpp  manager.h  widget.h
